# rust-autonomous-agents

./: Cargo.toml  README.md
src/: agent.rs  lib.rs  main.rs
src/agents/: agent.rs  basic_boid.rs  brain.rs  evader.rs  fleer.rs  mod.rs  moving_circle.rs  prey.rs  pursuer.rs  seeker.rs  state.rs
src/geometry/: mod.rs
src/physics/: acceleration.rs  mod.rs  position.rs  vector.rs  velocity.rs
src/simulation/: mod.rs
