[package]
name = "autonomous_agents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = {version = "0.18.1"}
rand =  "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
winit = "0.27.5"
[lib]
crate-type = ["cdylib", "rlib"]
